# mcp-server

./: .env  .gitignore  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  lint.yaml
assets/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  roadmap.md
assets/docs/images/: development_guide-EN.md  development_guide.md
assets/utils/: __init__.py  hwc_tools.py  model.py  openapi.py  sdk_utils.py  server.py  variable.py
assets/utils/config/: config.yaml  ecs.json
common_servers/mcp_server_time/: README.md  pyproject.toml
common_servers/mcp_server_time/src/mcp_server_time/: __init__.py  server.py
docs/: CONTRIBUTING_zh.md  develope-mcp-EN.md  develope-mcp.md
huaweicloud_marketplace_server/: README_en.md  README_zh.md
huaweicloud_services_server/: mcp_server_mss.rar
huaweicloud_services_server/mcp_server_aad/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_anti-ddos/: README_zh.md
huaweicloud_services_server/mcp_server_anti_ddos/: README_en.md
huaweicloud_services_server/mcp_server_aom/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_apiexplorer/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_apig/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_apm/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_as/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_asm/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_bcs/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_bms/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cae/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_campusgo/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cbh/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cbr/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cbs/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cc/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cce/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cci/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_ccm/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cdm/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_ces/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cfw/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cloudide/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cloudpipeline/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cloudrtc/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cloudtable/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cloudtest/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cms/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_coc/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codeartsartifact/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codeartsbuild/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codeartscheck/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codeartsdeploy/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codeartsinspector/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codeartspipeline/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codecheck/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codecraft/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_codehub/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_config/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cph/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cpts/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_craftartsipdcenter/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cse/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_csms/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_css/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_cts/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_das/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dataartsfabric/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dataartsinsight/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dataartsstudio/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dbss/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dc/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dcs/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_ddm/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dds/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_deh/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_devsecurity/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dgc/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dis/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dlf/: README_en.md  README_zh.md
huaweicloud_services_server/mcp_server_dli/: README_en.md  README_zh.md
huaweicoud_dws_mcp_inner/: .gitignore  README.md  pyproject.toml
huaweicoud_dws_mcp_inner/.codecheck/: codeccp_dt.yml
huaweicoud_dws_mcp_inner/conf/: config.yaml
huaweicoud_dws_mcp_inner/src/dws_mcp_server/: __init__.py  config.py  server.py  utils.py
huaweicoud_dws_mcp_inner/test/: __init__.py  test_util.py
src/: .env  config.py  obsserver.py  server.py
(+670 files in other folders)
