[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huaweicloudsdkecs>=3.1.147",
    "mcp[cli]>=1.8.0",
    "esdk-obs-python",
    "httpx>=0.28.1",
    "huaweicloudsdkims>=3.1.148",
    "huaweicloudsdkvpc>=3.1.148",
    "ruff>=0.11.10",
    "huaweicloudsdkcore>=3.1.148",
    "huaweicloudsdkocr>=3.1.148",
    "huaweicloudsdkevs>=3.1.148",
    "huaweicloudsdkeip>=3.1.148",
    "huaweicloudsdkdas>=3.1.148",
    "huaweicloudsdkelb>=3.1.148",
]

[tool.setuptools]
packages = ["huaweicloud_services_server", "assets"]
