# pyproject.toml (根目录)

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-huaweicloud-workspace"
version = "0.3.0"
description = "A Model Context Protocol server providing tools for Huawei Cloud"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "huaweicloud-dtse-team", email = "huaweicloud-dtse-team@huawei.com" },
]
keywords = ["huaweicloud", "mcp", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "aiohttp>=3.11.18",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tzdata>=2024.2",
    "huaweicloudsdkcore>=3.1.150"
]

[tool.setuptools]
packages = [
    "assets",
    "common_servers",
    "huaweicloud_marketplace_server",
    "huaweicloud_services_server"
]

[project.scripts]
mcp-server-aad = "huaweicloud_services_server.mcp_server_aad.src.mcp_server_aad.run:main"
mcp-server-aom = "huaweicloud_services_server.mcp_server_aom.src.mcp_server_aom.run:main"
mcp-server-apig = "huaweicloud_services_server.mcp_server_apig.src.mcp_server_apig.run:main"
mcp-server-apm = "huaweicloud_services_server.mcp_server_apm.src.mcp_server_apm.run:main"
mcp-server-as = "huaweicloud_services_server.mcp_server_as.src.mcp_server_as.run:main"
mcp-server-asm = "huaweicloud_services_server.mcp_server_asm.src.mcp_server_asm.run:main"
mcp-server-bcs = "huaweicloud_services_server.mcp_server_bcs.src.mcp_server_bcs.run:main"
mcp-server-bms = "huaweicloud_services_server.mcp_server_bms.src.mcp_server_bms.run:main"
mcp-server-cae = "huaweicloud_services_server.mcp_server_cae.src.mcp_server_cae.run:main"
mcp-server-cbh = "huaweicloud_services_server.mcp_server_cbh.src.mcp_server_cbh.run:main"
mcp-server-cbr = "huaweicloud_services_server.mcp_server_cbr.src.mcp_server_cbr.run:main"
mcp-server-cbs = "huaweicloud_services_server.mcp_server_cbs.src.mcp_server_cbs.run:main"
mcp-server-cce = "huaweicloud_services_server.mcp_server_cce.src.mcp_server_cce.run:main"
mcp-server-cci = "huaweicloud_services_server.mcp_server_cci.src.mcp_server_cci.run:main"
mcp-server-ccm = "huaweicloud_services_server.mcp_server_ccm.src.mcp_server_ccm.run:main"
mcp-server-cdm = "huaweicloud_services_server.mcp_server_cdm.src.mcp_server_cdm.run:main"
mcp-server-ces = "huaweicloud_services_server.mcp_server_ces.src.mcp_server_ces.run:main"
mcp-server-cfw = "huaweicloud_services_server.mcp_server_cfw.src.mcp_server_cfw.run:main"
mcp-server-cloudpipeline = "huaweicloud_services_server.mcp_server_cloudpipeline.src.mcp_server_cloudpipeline.run:main"
mcp-server-cloudtest = "huaweicloud_services_server.mcp_server_cloudtest.src.mcp_server_cloudtest.run:main"
mcp-server-cms = "huaweicloud_services_server.mcp_server_cms.src.mcp_server_cms.run:main"
mcp-server-coc = "huaweicloud_services_server.mcp_server_coc.src.mcp_server_coc.run:main"
mcp-server-codeartsbuild = "huaweicloud_services_server.mcp_server_codeartsbuild.src.mcp_server_codeartsbuild.run:main"
mcp-server-codeartscheck = "huaweicloud_services_server.mcp_server_codeartscheck.src.mcp_server_codeartscheck.run:main"
mcp-server-codeartsdeploy = "huaweicloud_services_server.mcp_server_codeartsdeploy.src.mcp_server_codeartsdeploy.run:main"
mcp-server-codeartsinspector = "huaweicloud_services_server.mcp_server_codeartsinspector.src.mcp_server_codeartsinspector.run:main"
mcp-server-codeartspipeline = "huaweicloud_services_server.mcp_server_codeartspipeline.src.mcp_server_codeartspipeline.run:main"
mcp-server-codehub = "huaweicloud_services_server.mcp_server_codehub.src.mcp_server_codehub.run:main"
mcp-server-cph = "huaweicloud_services_server.mcp_server_cph.src.mcp_server_cph.run:main"
mcp-server-cpts = "huaweicloud_services_server.mcp_server_cpts.src.mcp_server_cpts.run:main"
mcp-server-cse = "huaweicloud_services_server.mcp_server_cse.src.mcp_server_cse.run:main"
mcp-server-csms = "huaweicloud_services_server.mcp_server_csms.src.mcp_server_csms.run:main"
mcp-server-css = "huaweicloud_services_server.mcp_server_css.src.mcp_server_css.run:main"
mcp-server-cts = "huaweicloud_services_server.mcp_server_cts.src.mcp_server_cts.run:main"
mcp-server-das = "huaweicloud_services_server.mcp_server_das.src.mcp_server_das.run:main"
mcp-server-dbss = "huaweicloud_services_server.mcp_server_dbss.src.mcp_server_dbss.run:main"
mcp-server-dcs = "huaweicloud_services_server.mcp_server_dcs.src.mcp_server_dcs.run:main"
mcp-server-ddm = "huaweicloud_services_server.mcp_server_ddm.src.mcp_server_ddm.run:main"
mcp-server-dds = "huaweicloud_services_server.mcp_server_dds.src.mcp_server_dds.run:main"
mcp-server-dgc = "huaweicloud_services_server.mcp_server_dgc.src.mcp_server_dgc.run:main"
mcp-server-dis = "huaweicloud_services_server.mcp_server_dis.src.mcp_server_dis.run:main"
mcp-server-dlf = "huaweicloud_services_server.mcp_server_dlf.src.mcp_server_dlf.run:main"
mcp-server-dli = "huaweicloud_services_server.mcp_server_dli.src.mcp_server_dli.run:main"
mcp-server-dns = "huaweicloud_services_server.mcp_server_dns.src.mcp_server_dns.run:main"
mcp-server-dris = "huaweicloud_services_server.mcp_server_dris.src.mcp_server_dris.run:main"
mcp-server-drs = "huaweicloud_services_server.mcp_server_drs.src.mcp_server_drs.run:main"
mcp-server-dsc = "huaweicloud_services_server.mcp_server_dsc.src.mcp_server_dsc.run:main"
mcp-server-dss = "huaweicloud_services_server.mcp_server_dss.src.mcp_server_dss.run:main"
mcp-server-dws = "huaweicloud_services_server.mcp_server_dws.src.mcp_server_dws.run:main"
mcp-server-ecs = "huaweicloud_services_server.mcp_server_ecs.src.mcp_server_ecs.run:main"
mcp-server-eds = "huaweicloud_services_server.mcp_server_eds.src.mcp_server_eds.run:main"
mcp-server-eg = "huaweicloud_services_server.mcp_server_eg.src.mcp_server_eg.run:main"
mcp-server-eip = "huaweicloud_services_server.mcp_server_eip.src.mcp_server_eip.run:main"
mcp-server-elb = "huaweicloud_services_server.mcp_server_elb.src.mcp_server_elb.run:main"
mcp-server-eps = "huaweicloud_services_server.mcp_server_eps.src.mcp_server_eps.run:main"
mcp-server-er = "huaweicloud_services_server.mcp_server_er.src.mcp_server_er.run:main"
mcp-server-evs = "huaweicloud_services_server.mcp_server_evs.src.mcp_server_evs.run:main"
mcp-server-frs = "huaweicloud_services_server.mcp_server_frs.src.mcp_server_frs.run:main"
mcp-server-functiongraph = "huaweicloud_services_server.mcp_server_functiongraph.src.mcp_server_functiongraph.run:main"
mcp-server-gaussdbforopengauss = "huaweicloud_services_server.mcp_server_gaussdbforopengauss.src.mcp_server_gaussdbforopengauss.run:main"
mcp-server-geip = "huaweicloud_services_server.mcp_server_geip.src.mcp_server_geip.run:main"
mcp-server-ges = "huaweicloud_services_server.mcp_server_ges.src.mcp_server_ges.run:main"
mcp-server-gsl = "huaweicloud_services_server.mcp_server_gsl.src.mcp_server_gsl.run:main"
mcp-server-hss = "huaweicloud_services_server.mcp_server_hss.src.mcp_server_hss.run:main"
mcp-server-iam = "huaweicloud_services_server.mcp_server_iam.src.mcp_server_iam.run:main"
mcp-server-idt = "huaweicloud_services_server.mcp_server_idt.src.mcp_server_idt.run:main"
mcp-server-iec = "huaweicloud_services_server.mcp_server_iec.src.mcp_server_iec.run:main"
mcp-server-ief = "huaweicloud_services_server.mcp_server_ief.src.mcp_server_ief.run:main"
mcp-server-image = "huaweicloud_services_server.mcp_server_image.src.mcp_server_image.run:main"
mcp-server-imagesearch = "huaweicloud_services_server.mcp_server_imagesearch.src.mcp_server_imagesearch.run:main"
mcp-server-ims = "huaweicloud_services_server.mcp_server_ims.src.mcp_server_ims.run:main"
mcp-server-ivs = "huaweicloud_services_server.mcp_server_ivs.src.mcp_server_ivs.run:main"
mcp-server-kafka = "huaweicloud_services_server.mcp_server_kafka.src.mcp_server_kafka.run:main"
mcp-server-kms = "huaweicloud_services_server.mcp_server_kms.src.mcp_server_kms.run:main"
mcp-server-kps = "huaweicloud_services_server.mcp_server_kps.src.mcp_server_kps.run:main"
mcp-server-kvs = "huaweicloud_services_server.mcp_server_kvs.src.mcp_server_kvs.run:main"
mcp-server-lts = "huaweicloud_services_server.mcp_server_lts.src.mcp_server_lts.run:main"
mcp-server-mas = "huaweicloud_services_server.mcp_server_mas.src.mcp_server_mas.run:main"
mcp-server-moderation = "huaweicloud_services_server.mcp_server_moderation.src.mcp_server_moderation.run:main"
mcp-server-mpc = "huaweicloud_services_server.mcp_server_mpc.src.mcp_server_mpc.run:main"
mcp-server-mrs = "huaweicloud_services_server.mcp_server_mrs.src.mcp_server_mrs.run:main"
mcp-server-msgsms = "huaweicloud_services_server.mcp_server_msgsms.src.mcp_server_msgsms.run:main"
mcp-server-mssi = "huaweicloud_services_server.mcp_server_mssi.src.mcp_server_mssi.run:main"
mcp-server-nat = "huaweicloud_services_server.mcp_server_nat.src.mcp_server_nat.run:main"
mcp-server-nlp = "huaweicloud_services_server.mcp_server_nlp.src.mcp_server_nlp.run:main"
mcp-server-obs = "huaweicloud_services_server.mcp_server_obs.src.mcp_server_obs.run:main"
mcp-server-ocr = "huaweicloud_services_server.mcp_server_ocr.src.mcp_server_ocr.run:main"
mcp-server-oms = "huaweicloud_services_server.mcp_server_oms.src.mcp_server_oms.run:main"
mcp-server-oroas = "huaweicloud_services_server.mcp_server_oroas.src.mcp_server_oroas.run:main"
mcp-server-projectman = "huaweicloud_services_server.mcp_server_projectman.src.mcp_server_projectman.run:main"
mcp-server-ram = "huaweicloud_services_server.mcp_server_ram.src.mcp_server_ram.run:main"
mcp-server-rds = "huaweicloud_services_server.mcp_server_rds.src.mcp_server_rds.run:main"
mcp-server-res = "huaweicloud_services_server.mcp_server_res.src.mcp_server_res.run:main"
mcp-server-rgc = "huaweicloud_services_server.mcp_server_rgc.src.mcp_server_rgc.run:main"
mcp-server-rms = "huaweicloud_services_server.mcp_server_rms.src.mcp_server_rms.run:main"
mcp-server-rocketmq = "huaweicloud_services_server.mcp_server_rocketmq.src.mcp_server_rocketmq.run:main"
mcp-server-roma = "huaweicloud_services_server.mcp_server_roma.src.mcp_server_roma.run:main"
mcp-server-sa = "huaweicloud_services_server.mcp_server_sa.src.mcp_server_sa.run:main"
mcp-server-scm = "huaweicloud_services_server.mcp_server_scm.src.mcp_server_scm.run:main"
mcp-server-sdrs = "huaweicloud_services_server.mcp_server_sdrs.src.mcp_server_sdrs.run:main"
mcp-server-sfsturbo = "huaweicloud_services_server.mcp_server_sfsturbo.src.mcp_server_sfsturbo.run:main"
mcp-server-sis = "huaweicloud_services_server.mcp_server_sis.src.mcp_server_sis.run:main"
mcp-server-smn = "huaweicloud_services_server.mcp_server_smn.src.mcp_server_smn.run:main"
mcp-server-smnglobal = "huaweicloud_services_server.mcp_server_smnglobal.src.mcp_server_smnglobal.run:main"
mcp-server-sts = "huaweicloud_services_server.mcp_server_sts.src.mcp_server_sts.run:main"
mcp-server-swr = "huaweicloud_services_server.mcp_server_swr.src.mcp_server_swr.run:main"
mcp-server-tics = "huaweicloud_services_server.mcp_server_tics.src.mcp_server_tics.run:main"
mcp-server-tms = "huaweicloud_services_server.mcp_server_tms.src.mcp_server_tms.run:main"
mcp-server-vas = "huaweicloud_services_server.mcp_server_vas.src.mcp_server_vas.run:main"
mcp-server-vcm = "huaweicloud_services_server.mcp_server_vcm.src.mcp_server_vcm.run:main"
mcp-server-vias = "huaweicloud_services_server.mcp_server_vias.src.mcp_server_vias.run:main"
mcp-server-vis = "huaweicloud_services_server.mcp_server_vis.src.mcp_server_vis.run:main"
mcp-server-vod = "huaweicloud_services_server.mcp_server_vod.src.mcp_server_vod.run:main"
mcp-server-vpc = "huaweicloud_services_server.mcp_server_vpc.src.mcp_server_vpc.run:main"
mcp-server-vpcep = "huaweicloud_services_server.mcp_server_vpcep.src.mcp_server_vpcep.run:main"
mcp-server-vpn = "huaweicloud_services_server.mcp_server_vpn.src.mcp_server_vpn.run:main"
mcp-server-waf = "huaweicloud_services_server.mcp_server_waf.src.mcp_server_waf.run:main"
